# mesh2splat

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml
src/: a2.glb  main.cpp
src/utils/: glUtils.cpp
